GNOME Bugzilla – Bug 688963
Preview doesn't respect line breaks after restart
Last modified: 2012-11-24 21:43:15 UTC
Moved from github pictuga bug report : "If you insert linebreaks in your note, they will be shown on the preview on the main window. However if you restart the app, they won't be in the preview anymore. So you have to open the note, make a meaningless change (eg removing/adding an empty line) for the preview to look as expected again. A screenshot is easier to understand : http://pictuga.com/upload/834/" Issue is deserializer which does not handle br or div properly for text.
Ok change done Thanks pictuga
let's do the same with <ul/> !
Oops, indeed. I just fixed "list items" so both bullets and ordered lists are now right, thus leaving bug resolved.