Deserializer: Respect end of lines for note raw text

Insert space when br node found.
https://bugzilla.gnome.org/show_bug.cgi?id=688963